fix: dark mode fixes for ankidroid

--- a/src/templates/_logseq_anki_sync.css
+++ b/src/templates/_logseq_anki_sync.css
@@ -236,7 +236,7 @@ div.warning {
     margin-bottom: 12px;
     align-items: stretch;
     min-height: 32px;
-    color: inherit;
+    color: initial;
 }
 
 div.important::before,
